Fix journal scroll on Firefox OS

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,7 @@ input {
 }
 
 .journal-footer {
+	width: 100%;
 }
 
 .journal-list-item {
